First version of react sidebar without theme context

--- a/src/Components/CloseButton/closebutton.scss
+++ b/src/Components/CloseButton/closebutton.scss
@@ -1,27 +1,28 @@
+$TRANSITION_DURATION: 300;
+
 .Sidebar-close-button{
   width: 24px;
   height: 46px;
   top: 20px;
-  background: rgba(255,255,255,0.85);
-  position: fixed;
+  background: rgba(255,255,255,1);
+  position: absolute;
+  z-index: 5000;
   display: flex;
   justify-content: center;
   align-items: center;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
-  transform: translateX(500px);
-  transition: transform 100ms;
-
-  &.open{
-    transform: translateX(0px);
-    cursor: pointer;
-  }
 
   &.right {
-    right: 438px;
+    left: -22px;
+    box-shadow: -5px 3px 7px 0px rgba(0,0,0,0.3);
   }
 
   &.left {
-    left: 438px;
+    right: -22px;
+    box-shadow: 5px 3px 7px 0 rgba(0,0,0,0.3);
+  }
+
+  &.open{
+    cursor: pointer;
   }
 
   /** Childs **/
