--- a/src/sidebar.scss
+++ b/src/sidebar.scss
@@ -2,6 +2,24 @@ $TRANSITION_DURATION: 300;
 $SIDEBAR_SIZE: 408;
 $GENERAL_PADDING_SIZE: 15;
 
+
+$OPENING: 'OPENING';
+$CLOSING: 'CLOSING';
+$OPENED: 'OPENED';
+$CLOSED: 'CLOSED';
+
+.Sidebar-Blanket{
+    background-color: rgba(25, 25, 25, 0.75);
+    margin: 0;
+    padding: 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    z-index: 9998;
+}
+
 .Sidebar-Wrapper{
     width: #{$SIDEBAR_SIZE}px;
     transition: transform #{$TRANSITION_DURATION}ms, visibility #{$TRANSITION_DURATION}ms;
@@ -10,9 +28,10 @@ $GENERAL_PADDING_SIZE: 15;
     position: fixed;
     background: white;
     right: 0;
+    top: 0;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
     overflow-x: unset;
-    z-index: 5000;
+    z-index: 9999;
 
     &.right {
         right: 0;
@@ -24,60 +43,12 @@ $GENERAL_PADDING_SIZE: 15;
         transform: translateX(-#{$SIDEBAR_SIZE + $GENERAL_PADDING_SIZE * 2}px);
     }
 
-    &.open {
+    &.#{$OPENED}{
         transform: translateX(0px);
-    }
-
-    &.close {
-        visibility: hidden;
     }
 
     & > .Sidebar-Content{
         overflow-x: hidden;
         width: 100%;
     }
-}
-
-
-.Sidebar-Wrapper-action-button-container{
-    display: flex;
-    justify-content: space-around;
-}
-
-.Sidebar-Wrapper-action-button{
-    display: inline;
-
-    & > div {
-        flex-direction: column !important;
-    }
-}
-
-.Sidebar-Wrapper-text {
-    font-family: Roboto, Arial,sans-serif;
-    margin: 0;
-    padding: 0;
-}
-
-.Sidebar-Wrapper-divider{
-    width: calc(100% + 30px);
-    transform: translateX(-15px);
-    border-bottom: 1px solid #e6e6e6;
-    padding-top: 16px;
-    margin-bottom: 16px;
-}
-
-.Sidebar-Wrapper-vertical-divider{
-    border-left: 1px solid #e6e6e6;
-}
-
-
-.Sidebar-Wrapper-section-title{
-    margin-bottom: 5px;
-    font-weight: 400;
-}
-
-.Sidebar-Wrapper-title{
-    font-size: 2em !important;
-    font-weight: 400;
-    line-height: 1.75em;
 }
